--- a/Src/RiderPlugin/settings.gradle
+++ b/Src/RiderPlugin/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'rider-Roflcopter'
 gradle.ext.resharperPluginProjectName = 'Roflcopter.Plugin'
-gradle.ext.productVersion = '2022.3-SNAPSHOT' //https://www.jetbrains.com/intellij-repository/releases
+gradle.ext.productVersion = '2022.3.1' //https://www.jetbrains.com/intellij-repository/releases
 gradle.ext.reSharperVersionIdentifier = 'RD20223'
