--- a/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
+++ b/Src/RiderPlugin/src/main/resources/META-INF/plugin.xml
@@ -26,7 +26,9 @@
     <applicationConfigurable
       parentId="CodeInspectionSettingsId"
       instance="com.jetbrains.rider.roflcopter.settings.MismatchedFileNamesOptionsPage"
-      id="preferences.MismatchedFileNamesOptionsPage"/>
+      id="preferences.MismatchedFileNamesOptionsPage"
+      displayName="Mismatched file names"
+    />
   </extensions>
 
   <actions>
