--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,13 +3,13 @@
     "Build.ps1 w/o Rider and Tests": {
       "commandName": "Executable",
       "executablePath": "pwsh",
-      "commandLineArgs": "-Command Build\\Build.ps1 -BuildRiderPlugin 0 -RunTests 0 || pause",
+      "commandLineArgs": "-Command Build\\Build.ps1 -BuildRiderPlugin 0 -RunTests 0; pause",
       "workingDirectory": "$(SolutionDir)"
     },
     "Build.ps1": {
       "commandName": "Executable",
       "executablePath": "pwsh",
-      "commandLineArgs": "-Command Build\\Build.ps1 || pause",
+      "commandLineArgs": "-Command Build\\Build.ps1; pause",
       "workingDirectory": "$(SolutionDir)"
     }
   }
