--- a/SolutionItems.csproj
+++ b/SolutionItems.csproj
@@ -14,6 +14,7 @@
     <None Include="Doc\**" />
     <None Include="Src\*" />
     <None Include="Src\RiderPlugin\*" />
+    <None Include="Src\RiderPlugin\gradle\**" />
     <None Include="Src\RiderPlugin\src\**" />
     <None Include="Shared\Build\**" />
   </ItemGroup>
